// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL dVEtOZ"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL dfgxFG cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL cgTHSD"
    >
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eRxlVY"
        >
          <p
            className="sc-bcXGCL eGvFVR cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL jMALnA cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL eLnDpj cap-form-control"
      >
        <label
          className="sc-bcXGCL hiAOoW cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bcXGCL gUkIhr cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk bzZHnn bmynOz cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL gdJCyL"
    >
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eRxlVY"
        >
          <p
            className="sc-bcXGCL eGvFVR cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL jMALnA cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eLnDpj cap-form-control"
        >
          <label
            className="sc-bcXGCL hiAOoW cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bcXGCL gUkIhr cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bcXGCL daHHgd cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL jMALnA cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL ciCehw cap-input-group"
          >
            <div
              className="sc-bcXGCL fDqpkd"
            >
              <div
                aria-label="Tag custom.domain.com"
                className="sc-bcXGCL fnXYCb cap-tag"
                onBlur={[Function]}
                onFocus={[Function]}
                tabIndex={-1}
                title="custom.domain.com"
              >
                <span
                  className="sc-bcXGCL cknzsH cap-tag__label"
                >
                  custom.domain.com
                </span>
                <button
                  aria-label="Remove custom.domain.com"
                  className="sc-bcXGCL sc-laZSpB gHFgbR gDuqin cap-button cap-tag__closeButton"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-eJDTud iCzCId dUaqWe cap-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 12"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11 11 1M1 1l10 10"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
[
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <form
    className="sc-bcXGCL dVEtOZ"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bcXGCL dfgxFG cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bcXGCL cgTHSD"
    >
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eRxlVY"
        >
          <p
            className="sc-bcXGCL eGvFVR cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bcXGCL jMALnA cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL eLnDpj cap-form-control"
      >
        <label
          className="sc-bcXGCL hiAOoW cap-form-label"
          htmlFor="subDomain"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bcXGCL gUkIhr cap-text"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bcXGCL sc-dwnPIk bzZHnn bmynOz cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bcXGCL gdJCyL"
    >
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eRxlVY"
        >
          <p
            className="sc-bcXGCL eGvFVR cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bcXGCL jMALnA cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL efvOvR"
      >
        <div
          className="sc-bcXGCL eLnDpj cap-form-control"
        >
          <label
            className="sc-bcXGCL hiAOoW cap-form-label"
            htmlFor="customDomain"
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bcXGCL gUkIhr cap-text"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bcXGCL daHHgd cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bcXGCL jMALnA cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bcXGCL ciCehw cap-input-group"
          >
            <input
              className="sc-bcXGCL sc-dwnPIk bzZHnn bmynOz cap-input"
              disabled={false}
              id="customDomain"
              name="customDomain"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="custom-domain-placeholder"
              required={false}
              type="text"
            />
            <button
              className="sc-bcXGCL sc-laZSpB cDseqh ietVcX cap-button"
              disabled={true}
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;
